登录功能完成

--- a/vue-vben-admin-2.10/.vscode/settings.json
+++ b/vue-vben-admin-2.10/.vscode/settings.json
@@ -91,7 +91,8 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": "explicit",
       "source.fixAll.stylelint": "explicit"
-    }
+    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "i18n-ally.localesPaths": ["src/locales/lang"],
   "i18n-ally.keystyle": "nested",
